--- a/app/src/main/c/engine/CMakeLists.txt
+++ b/app/src/main/c/engine/CMakeLists.txt
@@ -1,28 +1,24 @@
 cmake_minimum_required(VERSION 3.22.1)
 
+set(${CMAKE_C_FLAGS}, "${CMAKE_C_FLAGS} -std=c89 -Wall -Werror -Wextra -Wpedantic -Wno-unused-variable -Wno-unused-parameter")
+set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -u ANativeActivity_onCreate")
+
 project("luna-engine-core")
 
-set(${CMAKE_C_FLAGS}, "${CMAKE_C_FLAGS} -std=c89 -Wall -Werror -Wextra -Wpedantic -Wno-unused-variable -Wno-unused-parameter")
-set(CMAKE_SHARED_LINKER_FLAGS
-        "${CMAKE_SHARED_LINKER_FLAGS} -u ANativeActivity_onCreate")
-
-set(TARGET android)
+add_subdirectory(driver/video)
 
 add_library(native_app_glue STATIC
         ${CMAKE_ANDROID_NDK}/sources/android/native_app_glue/android_native_app_glue.c)
 
 add_library(LunaCore STATIC
-        src/luna.c
-        src/platform/${TARGET}/gl.c)
+        luna/luna.c
+        luna/gl.c)
 
 target_include_directories(LunaCore PRIVATE
-        ${CMAKE_ANDROID_NDK}/sources/android/native_app_glue)
-target_include_directories(LunaCore PRIVATE
-        src/platform/${TARGET})
+            ${CMAKE_ANDROID_NDK}/sources/android/native_app_glue)
 
 target_link_libraries(LunaCore
+        LunaVideoDriver
         android
         native_app_glue
-        EGL
-        GLESv1_CM
         log)
