--- a/app/src/main/c/engine/CMakeLists.txt
+++ b/app/src/main/c/engine/CMakeLists.txt
@@ -7,15 +7,19 @@ project("luna-engine-core")
 
 add_subdirectory(driver/video)
 
+target_compile_definitions(LunaVideoDriver PUBLIC GLES_IMPL)
+
 add_library(native_app_glue STATIC
         ${CMAKE_ANDROID_NDK}/sources/android/native_app_glue/android_native_app_glue.c)
 
 add_library(LunaCore STATIC
-        luna/luna.c
-        luna/gl.c)
+        luna/luna.c)
 
-target_include_directories(LunaCore PRIVATE
-            ${CMAKE_ANDROID_NDK}/sources/android/native_app_glue)
+target_include_directories(LunaCore
+        PRIVATE
+            ${CMAKE_ANDROID_NDK}/sources/android/native_app_glue
+        PUBLIC
+            .)
 
 target_link_libraries(LunaCore
         LunaVideoDriver
