--- a/app/src/main/c/engine/driver/video/CMakeLists.txt
+++ b/app/src/main/c/engine/driver/video/CMakeLists.txt
@@ -1,9 +1,7 @@
 add_library(LunaVideoDriver STATIC
         impl/gles.c)
 
-target_include_directories(LunaVideoDriver
-        PUBLIC
-            ./)
+target_include_directories(LunaVideoDriver PUBLIC ./)
 
 target_link_libraries(LunaVideoDriver
         EGL
